UtahLiveDataTest/src/objects/SiteVisit__c.object
<CustomObject>
    <description>[Business] This object is used to store all the information related to the Site Visits which is a Post Award Activity.</description>
    <fields>
        <fullName>Acknowledgement__c</fullName>
        <label>Acknowledgement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ActivityQuestion1__c</fullName>
        <label>ActivityQuestion1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ActivityQuestion2__c</fullName>
        <label>ActivityQuestion2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ActivityQuestion3__c</fullName>
        <label>ActivityQuestion3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agreement1__c</fullName>
        <description>This field is used in Grantor:Programmatic Review form.</description>
        <label>Agreement1</label>
        <length>22768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agreement2__c</fullName>
        <description>This field is used in Grantor:Financial Review form.</description>
        <label>Agreement2</label>
        <length>22768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ApplicantEmail__c</fullName>
        <description>This field is used for sending email to sub. populated in site visit tasks handler.</description>
        <label>Applicant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ApprovalManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Site_Visits1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AreIssuestobediscusseddetermined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determine Issues to Discuss during site visit should be decided prior to site visit</description>
        <inlineHelpText>Determine Issues to Discuss during site visit should be decided prior to site visit</inlineHelpText>
        <label>Are Issues to be discussed determined?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AreObjectivesforVisitDiscussed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Discussion of  objectives for visit, including document(s) to review done.</description>
        <inlineHelpText>Is the Discussion of  objectives for visit, including document(s) to review done.</inlineHelpText>
        <label>Are Objectives for Visit Discussed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AssignedTo__c</fullName>
        <formula>Grant__r.AssignedTo__r.FirstName &amp; &quot; &quot; &amp; Grant__r.AssignedTo__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant Assigned To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AwardLink__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+Award__r.Id, Award__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Award</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>Site Visits</relationshipLabel>
        <relationshipName>SiteVisits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CheckListComment10__c</fullName>
        <label>Check List Comment 10</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CheckListComment11__c</fullName>
        <label>Check List Comment 11</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CheckListComment12__c</fullName>
        <label>Check List Comment 12</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CheckListItem10__c</fullName>
        <label>CheckList Item10</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CheckListItem11__c</fullName>
        <label>CheckList Item11</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CheckListItem12__c</fullName>
        <label>CheckList Item12</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Comparedtosubmittedreports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compared to submitted reports?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ComplianceRating__c</fullName>
        <label>Compliance Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Compliance</fullName>
                </value>
                <value>
                    <fullName>Out of Compliance</fullName>
                </value>
                <value>
                    <fullName>Cannot be determined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conclusion__c</fullName>
        <label>Conclusion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Need to Follow Up</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DateReportSubmitted__c</fullName>
        <description>This field is used in grouping for reports.</description>
        <label>Date Report Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DaysLeft__c</fullName>
        <formula>IF( ReportDueDate__c&gt; TODAY() ,ReportDueDate__c - TODAY(),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Left</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DetermineIssuestoDiscuss__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Determine Issues to Discuss</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discussedobjectivesforvisit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discussed objectives for visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DocumentDueDate__c</fullName>
        <label>DocumentDueDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DocumentList__c</fullName>
        <label>DocumentList</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Purchasing policies and procedures</fullName>
                </value>
                <value>
                    <fullName>Personnel policies and procedures</fullName>
                </value>
                <value>
                    <fullName>Payroll policies and procedures</fullName>
                </value>
                <value>
                    <fullName>Equal employment plan</fullName>
                </value>
                <value>
                    <fullName>Travel policies and procedures</fullName>
                </value>
                <value>
                    <fullName>Sample timesheet</fullName>
                </value>
                <value>
                    <fullName>Current 501 (c) 3 status</fullName>
                </value>
                <value>
                    <fullName>Business license</fullName>
                </value>
                <value>
                    <fullName>Document showing tax-exemption</fullName>
                </value>
                <value>
                    <fullName>Current list of board members and their positions on the board</fullName>
                </value>
                <value>
                    <fullName>Board bylaws</fullName>
                </value>
                <value>
                    <fullName>Agendas for last three board meetings</fullName>
                </value>
                <value>
                    <fullName>Financial audits for last two years, any single-audit, or other audits</fullName>
                </value>
                <value>
                    <fullName>A list of employees funded on Utah grants, their rates of pay and fringe/benefit rates, and hours funded on each Utah grant.</fullName>
                </value>
                <value>
                    <fullName>Cash disbursement policies and procedures</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Documentdifferences__c</fullName>
        <label>Document differences</label>
        <length>40000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EmailPOC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email POC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Site_Visits9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinancialReviewReadOnly__c</fullName>
        <formula>IF(($UserRole.Name == &apos;CHA Grant Monitor&apos; || $UserRole.Name == &apos;HAHSTA Grant Monitor&apos;),false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FinancialReviewReadOnly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FormsValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for validation of form depends upon percentage of form filled.</description>
        <label>Forms Validated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GrantAdministratorName__c</fullName>
        <formula>GrantAdministrator__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GrantAdministratorName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantAdministrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant Administrator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Site_VisitsdG0V</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrantAssigndToEmail__c</fullName>
        <formula>Grant__r.AssignedTo__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant Assignd To Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantAssignedToID__c</fullName>
        <formula>Grant__r.AssignedTo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant Assigned To ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantMonitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant Monitor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Site_Visits3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrantNumber__c</fullName>
        <formula>Grant__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant</label>
        <referenceTo>Grant__c</referenceTo>
        <relationshipLabel>Site Visits</relationshipLabel>
        <relationshipName>Site_Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GranteePOCEmail__c</fullName>
        <formula>Grant__r.GranteePOC__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grantee POC Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GranteePOCID__c</fullName>
        <formula>Grant__r.GranteePOC__r.Contact.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grantee POC ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GranteePOC__c</fullName>
        <formula>Grant__r.GranteePOC__r.FirstName &amp; &apos;&apos; &amp;  Grant__r.GranteePOC__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grantee POC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HideAttachmentButtons__c</fullName>
        <formula>IF(($User.IsApplicant__c), NOT(ISPICKVAL(Status__c,&apos;Planned and Submitted to Subrecipient&apos;)), NOT(ISPICKVAL(Status__c,&apos;Created&apos;)))</formula>
        <label>HideAttachmentButtons</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideCreateAwardBtn__c</fullName>
        <formula>NOT(AND(GrantAssignedToID__c = $User.Id,ResultsinAward__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Create Award Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideDeleteBtn__c</fullName>
        <formula>OR( AND( RecordType.DeveloperName =&apos;Grantee&apos;,  NOT(OR($Profile.Name =&apos;SME&apos;,$Profile.Name =&apos;SPA&apos;,$Profile.Name =&apos;SPA&apos;))) ,
    AND( RecordType.DeveloperName =&apos;Grantor&apos;,  
       NOT(OR(ISPICKVAL(Status__c,&apos;Created&apos;),
              ISPICKVAL(Status__c,&apos;Planned&apos;),
              ISPICKVAL(Status__c,&apos;Visited&apos;)
              )
           )
      )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideDeleteBtn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditButtonDecision__c</fullName>
        <formula>IF((ISPICKVAL(Status__c,&apos;Initiated By PO&apos;) || ISPICKVAL(Status__c,&apos;Grant Monitor Rejected&apos;) || ISPICKVAL(Status__c,&apos;Program Manager Rejected&apos;))&amp;&amp; ($UserRole.Name == &apos;CHA Project Officer&apos; || $UserRole.Name == &apos;HAHSTA Project Officer&apos; ),false,IF(ISPICKVAL(Status__c,&apos;Initiated By GM&apos;) &amp;&amp; ($UserRole.Name == &apos;CHA Grant Monitor&apos; || $UserRole.Name == &apos;HAHSTA Grant Monitor&apos;),false,IF(ISPICKVAL(Status__c,&apos;Submitted&apos;) &amp;&amp; ($UserRole.Name == &apos;CHA Project Officer&apos; || $UserRole.Name == &apos;HAHSTA Project Officer&apos;),true,IF(ISPICKVAL(Status__c,&apos;Submitted&apos;) &amp;&amp; ($UserRole.Name == &apos;CHA Grant Monitor&apos; || $UserRole.Name == &apos;HAHSTA Grant Monitor&apos; ),true,IF(ISPICKVAL(Status__c,&apos;Grant Monitor Approved&apos;) &amp;&amp; ($UserRole.Name == &apos;CHA Grant Monitor&apos; || $UserRole.Name == &apos;HAHSTA Grant Monitor&apos; ),true,IF(ISPICKVAL(Status__c,&apos;Grant Monitor Rejected&apos;) &amp;&amp; ($UserRole.Name == &apos;CHA Grant Monitor&apos; || $UserRole.Name == &apos;HAHSTA Grant Monitor&apos; ),true,IF(ISPICKVAL(Status__c,&apos;Grant Monitor Approved&apos;)&amp;&amp; ($UserRole.Name == &apos;CHA Program Manager&apos; || $UserRole.Name == &apos;HAHSTA Program Manager&apos;),false,IF(ISPICKVAL(Status__c,&apos;Grant Monitor Rejected&apos;)&amp;&amp; ($UserRole.Name == &apos;CHA Program Manager&apos; || $UserRole.Name == &apos;HAHSTA Program Manager&apos;),true,IF(ISPICKVAL(Status__c,&apos;Grant Monitor Rejected&apos;)&amp;&amp; ($UserRole.Name == &apos;CHA Program Manager&apos; || $UserRole.Name == &apos;HAHSTA Program Manager&apos;),true,true)))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Edit Button Decision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditButton__c</fullName>
        <formula>OR(ISPICKVAL(Status__c,&apos;Report Submitted&apos;),
ISPICKVAL(Status__c,&apos;Report Approved&apos;),
ISPICKVAL(Status__c,&apos;Closed&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Edit Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideFindingsBlock__c</fullName>
        <formula>NOT(OR(ISPICKVAL(Status__c, &apos;Sent to Subrecipient&apos;), ISPICKVAL(Status__c, &apos;Feedback from Subrecipient&apos;), ISPICKVAL(Status__c, &apos;Closed&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideFindingsBlock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideIfStatusNotCreated__c</fullName>
        <formula>NOT(ISPICKVAL(Status__c,&apos;Created&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideIfStatusNotCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideIfStatusNotRBG__c</fullName>
        <formula>NOT(ISPICKVAL(Status__c,&apos;Reviewed by Grantor&apos;))</formula>
        <label>HideIfStatusNotRBG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideIfStatusNotVisited__c</fullName>
        <formula>NOT(ISPICKVAL(Status__c,&apos;Visited&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideIfStatusNotVisited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HidePageMessage__c</fullName>
        <formula>IF(ISPICKVAL(Status__c,&apos;Submitted&apos;) &amp;&amp;  ($UserRole.Name  == &apos;CHA Grant Monitor&apos; || $UserRole.Name  == &apos;HAHSTA Grant Monitor&apos;),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HidePageMessage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideSubmitSiteVisitReportBtn__c</fullName>
        <formula>NOT(AND(TEXT(Status__c) = &apos;In Progress&apos;, $User.Id = SiteVisitor__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Submit Site Visit Report Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsFixedVisit__c</fullName>
        <formula>If(ISPICKVAL(ReportingFrequency__c,&apos;Fixed&apos;),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsFixedVisit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsGrantFileReviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Review of Grant File needs to be done prior to visit.</description>
        <label>Is Grant File Reviewed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRecipientPOCNotified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Action to be completed prior to site visit.</description>
        <inlineHelpText>Action to be completed prior to site visit.</inlineHelpText>
        <label>Notify recipient point of contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRecordRecalled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRecordRecalled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSiteVisitFinalized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Site Visit Finalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IssuesforFollowup__c</fullName>
        <label>Issues for Follow-up</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NotificationTemplate__c</fullName>
        <label>Notification Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotifiedRecipientPointofContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notified Recipient Point of Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Observationaboutprojectactivities__c</fullName>
        <description>This field will contain points observed during site visit</description>
        <inlineHelpText>This field will contain points observed during site visit</inlineHelpText>
        <label>Observations about  project activities</label>
        <length>40000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrganizationName__c</fullName>
        <formula>Grant__r.InternalOrganization__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>40000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pointsdiscussedwithofficials__c</fullName>
        <label>Points discussed with officials</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProgramApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Site_Visits8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramDescription__c</fullName>
        <label>Program Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProgramManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Site_Visits5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramRating__c</fullName>
        <label>Program Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Satisfactory Progress</fullName>
                </value>
                <value>
                    <fullName>Unsatifactory Progress</fullName>
                </value>
                <value>
                    <fullName>Follow up needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProjectDirector__c</fullName>
        <formula>Grant__r.ProjectDirector__r.FirstName &amp; &quot; &quot; &amp; Grant__r.ProjectDirector__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Site_Visits4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectTitle__c</fullName>
        <formula>Grant__r.ProjectTitle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReadOnlyFields__c</fullName>
        <formula>IF( ($UserRole.Name == &apos;CHA Project Officer&apos; || $UserRole.Name == &apos;HAHSTA Project Officer&apos;),false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReadOnlyFields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReasonforVisit__c</fullName>
        <label>Reason for the Visit</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecallComments__c</fullName>
        <label>RecallComments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommendation__c</fullName>
        <label>Recommendation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Continue to Monitor</fullName>
                </value>
                <value>
                    <fullName>Reprogramming Required</fullName>
                </value>
                <value>
                    <fullName>Follow up Visit Scheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RenderPageMessage__c</fullName>
        <formula>IF(ISPICKVAL(Status__c,&apos;Initiated By GM&apos;) &amp;&amp;  ($UserRole.Name == &apos;CHA Project Officer&apos; || $UserRole.Name == &apos;HAHSTA Project Officer&apos; ),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Render Page Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReportDueDate__c</fullName>
        <description>Report Due Date</description>
        <label>Report Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReportSubmittedDecision__c</fullName>
        <formula>IF((ISPICKVAL(Status__c,&apos;Initiated By GM&apos;) || ISPICKVAL(Status__c,&apos;Grant Monitor Rejected&apos;) || ISPICKVAL(Status__c,&apos;Program Manager Rejected&apos;)) &amp;&amp;  ($UserRole.Name == &apos;CHA Grant Monitor&apos; || $UserRole.Name == &apos;HAHSTA Grant Monitor&apos;),false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Submitted Decision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReportingFrequency__c</fullName>
        <label>Reporting Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReportingPeriodEndDate__c</fullName>
        <label>Reporting Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReportingPeriodStartDate__c</fullName>
        <label>Reporting Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ResultsinAward__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Results in Award</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReviewedGrantFile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reviewed Grant File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScheduleTitle__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteLocationText__c</fullName>
        <label>Site Visit Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteLocation__c</fullName>
        <label>Site Location</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SiteVisitAssessment__c</fullName>
        <description>This field is used for Site Visit report for grouping</description>
        <formula>IF (AND (NOT(ISBLANK(DateReportSubmitted__c)),(DateReportSubmitted__c&lt;ReportDueDate__c )),&quot;ON TIME SUBMISSION&quot;,IF (AND (NOT(ISBLANK(DateReportSubmitted__c)),(DateReportSubmitted__c&gt;ReportDueDate__c )),&quot;LATE SUBMISSION&quot;,&quot;OVERDUE SUBMISSION&quot;))</formula>
        <label>Site Visit Assessment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteVisitLocation__c</fullName>
        <label>Site Visit Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>SiteVisitMonth__c</fullName>
        <description>This field can be used to display the due month of site visit scheduled date</description>
        <formula>CASE( MONTH(ReportingPeriodStartDate__c) , 
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Visit Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteVisitNameTemplate__c</fullName>
        <formula>Award__r.Grant__r.Name+&apos;-&apos;+&apos;SV-&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SiteVisitNameTemplate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteVisitName__c</fullName>
        <label>Site Visit Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteVisitPeriod__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(ReportingPeriodEndDate__c)),NOT(ISBLANK(ReportingPeriodStartDate__c))),TEXT(MONTH(ReportingPeriodStartDate__c))+&quot;/&quot; +TEXT(DAY(ReportingPeriodStartDate__c))+&quot;/&quot; +TEXT(YEAR(ReportingPeriodStartDate__c))+&quot;--&quot;+ TEXT(MONTH(ReportingPeriodEndDate__c))+&quot;/&quot; +TEXT(DAY(ReportingPeriodEndDate__c))+&quot;/&quot; +TEXT(YEAR(ReportingPeriodEndDate__c)) , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Visit Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteVisitPersons__c</fullName>
        <label>Site Visit Persons</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SiteVisitReport__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Visit Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteVisitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Visitor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Site_Visits</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>